@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0xB0,0xE0,0xEC,0x93,0x2C,0x3E,0xBB,0x6C,0x9C,0x7D,0xD7,0x46,
-		0xA5,0x9A,0xBD,0x05,0x35,0x09,0xAA,0xD4,0xF6,0x59,0xD9,0xB7,
-		0xC8,0x04,0x7A,0x88,0x0F,0xBF,0x9D,0xBB,0xAE,0xC9,0xD0,0xA2,
-		0xC6,0xE5,0x8E,0xAC,0x13,0x01,0x4C,0x2B,0x1E,0x18,0xB0,0xC6,
-		0x46,0x6E,0x70,0x6E,0xED,0xBC,0x4C,0x47,0xA3,0x9D,0x23,0x6D,
-		0xD1,0x37,0xFB,0x3B,
+		0xE2,0x44,0x02,0x4F,0x5D,0x56,0x0A,0x7E,0xA9,0x54,0x39,0x9F,
+		0xFA,0x36,0x7A,0x59,0xBD,0x4B,0xC4,0x7E,0xC9,0xF6,0x79,0xA4,
+		0xD7,0x3B,0xAD,0xB7,0xA6,0x8E,0xEA,0xE1,0x4E,0x79,0x09,0x62,
+		0x02,0xD0,0xBD,0xED,0x70,0x13,0xFE,0x29,0x66,0x57,0xFB,0x3A,
+		0x4A,0xF7,0x23,0xFF,0x65,0xE4,0xB0,0x75,0x76,0xD6,0x48,0x15,
+		0x01,0x5F,0xBA,0x63,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
