@@ -7,6 +7,7 @@ NRPE Changelog
 ----------------
 - (Re)added allowed_hosts option for systems that don't support TCP wrappers
 - Fix for SSL errors under Solaris 8 (Niels Endres)
+- Fix for config file directory inclusion on ReiserFS (Gerhard Lausser)
 
 
 2.4 - 02/22/2006
